Add image for Thorin, Killi and Billi. Short description, add type attribute for link tags

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,5 +34,8 @@
   },
   "[css]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[html]": {
+    "editor.defaultFormatter": "vscode.html-language-features"
   }
 }
