--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,5 +37,8 @@
   },
   "[html]": {
     "editor.defaultFormatter": "vscode.html-language-features"
+  },
+  "[json]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   }
 }
